--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   },
   "keywords": [],
   "author": "Marcin Skrzyński",
-  "license": "ISC"
+  "license": "AGPLv3",
+  "dependencies": {
+    "@changesets/cli": "^2.26.1"
+  }
 }
