--- a/examples/nextjs/.scrshotrc
+++ b/examples/nextjs/.scrshotrc
@@ -1,6 +1,7 @@
 {
   "url": "http://localhost:3000",
   "dest": "public/screenshots",
+  "license": "62BBB29B-FE81-45AC-8789-101105BB0264",
   "screenshots": {
     "homepage": {
       "path": "/"
