--- a/examples/vite-react/.scrshotrc
+++ b/examples/vite-react/.scrshotrc
@@ -1,6 +1,7 @@
 {
   "url": "http://127.0.0.1:5173",
   "dest": "src/assets",
+  "license": "62BBB29B-FE81-45AC-8789-101105BB0264",
   "screenshots": {
     "homepage": {
       "path": "/"
