--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,6 +27,7 @@
     "@scrshot/helpers": "0.0.1",
     "minimist": "^1.2.8",
     "ms": "^2.1.3",
+    "node-fetch": "^3.3.1",
     "ora": "^6.3.1",
     "playwright": "^1.34.3",
     "sharp": "^0.32.1"
