--- a/examples/taxonomy/package.json
+++ b/examples/taxonomy/package.json
@@ -120,6 +120,7 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.3.1",
     "typescript": "4.7.4",
-    "unist-util-visit": "^4.1.2"
+    "unist-util-visit": "^4.1.2",
+    "@scrshot/bundler": "0.0.2"
   }
 }
