--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,7 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.2.9",
     "@stencil/core": "3.3.1",
     "@stencil/react-output-target": "0.5.1",
     "@stencil/store": "2.0.8"
