fix: fix building packages process

--- a/packages/bundler/tsconfig.json
+++ b/packages/bundler/tsconfig.json
@@ -10,7 +10,7 @@
     "outDir": "./dist",
     "lib": ["dom", "es2015"],
     "module": "es2015",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "target": "es2015",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
