--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -23,11 +23,10 @@
   },
   "dependencies": {
     "@scrshot/helpers": "0.0.1",
-    "magicast": "^0.2.9",
-    "recast": "^0.23.2",
-    "unplugin": "^1.3.1"
+    "recast": "0.23.2",
+    "unplugin": "1.3.1"
   },
   "devDependencies": {
-    "typescript": "4.9.4"
+    "typescript": "^5.2.0-dev.20230607"
   }
 }
