--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scrshot/website",
+  "name": "website",
   "description": "A template to make your website using Astro + Tailwind CSS.",
   "license": "AGPL-v3",
   "version": "0.9.8",
