--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@scrshot/bundler",
-  "version": "0.0.0-dev-20230608122154",
-  "author": "Marcin Skrzyński",
+  "version": "0.0.0-dev-20230608124649",
+  "description": "Bundlers plugin for Scrshot - Create up-to-date application screenshots",
+  "keywords": [
+    "cli",
+    "screenshots",
+    "up-to-date screenshots"
+  ],
+  "author": {
+    "name": "Marcin Skrzyński",
+    "url": "https://marcin.page/"
+  },
+  "homepage": "https://scrshot.dev",
   "license": "AGPLv3",
-  "private": true,
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
@@ -22,7 +31,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@scrshot/config": "0.0.0-dev-20230608122042",
+    "@scrshot/config": "0.0.0-dev-20230608124649",
     "recast": "0.23.2",
     "unplugin": "1.3.1"
   },
