--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@scrshot/config",
-  "version": "0.0.0-dev-20230608122042",
-  "author": "Marcin Skrzyński",
+  "version": "0.0.0-dev-20230608124649",
+  "description": "CLI config for Scrshot - Create up-to-date application screenshots",
+  "keywords": [
+    "cli",
+    "screenshots",
+    "up-to-date screenshots"
+  ],
+  "author": {
+    "name": "Marcin Skrzyński",
+    "url": "https://marcin.page/"
+  },
+  "homepage": "https://scrshot.dev",
   "license": "AGPLv3",
-  "private": true,
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
