--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "screenshots": "scrshot"
+    "screenshots": "scrshot dev"
   },
   "dependencies": {
     "@types/node": "20.2.5",
@@ -22,10 +22,10 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "@scrshot/react": "0.0.0-dev-20230608124649"
+    "@scrshot/react": "0.1.1"
   },
   "devDependencies": {
-    "@scrshot/cli": "0.0.0-dev-20230608124649",
-    "@scrshot/bundler": "0.0.0-dev-20230608124649"
+    "@scrshot/cli": "0.1.1",
+    "@scrshot/bundler": "0.1.1"
   }
 }
