--- a/examples/vite-react/package.json
+++ b/examples/vite-react/package.json
@@ -8,12 +8,12 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "screenshots": "scrshot"
+    "screenshots": "scrshot dev"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@scrshot/react": "0.0.0-dev-20230608124649"
+    "@scrshot/react": "0.1.1"
   },
   "devDependencies": {
     "@types/react": "18.2.8",
@@ -26,7 +26,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "@scrshot/cli": "0.0.0-dev-20230608124649",
-    "@scrshot/bundler": "0.0.0-dev-20230608124649"
+    "@scrshot/cli": "0.1.0",
+    "@scrshot/bundler": "0.1.0"
   }
 }
