--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/bundler",
-  "version": "0.0.0-dev-20230608124649",
+  "version": "0.1.1",
   "description": "Bundlers plugin for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -31,7 +31,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@scrshot/config": "0.0.0-dev-20230608124649",
+    "@scrshot/config": "0.1.1",
     "recast": "0.23.2",
     "unplugin": "1.3.1"
   },
