--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/cli",
-  "version": "0.0.0-dev-20230608124649",
+  "version": "0.1.1",
   "description": "CLI for Scrshot - Create up-to-date application screenshots",
   "type": "module",
   "keywords": [
@@ -33,7 +33,7 @@
     "unbuild": "^1.2.1"
   },
   "dependencies": {
-    "@scrshot/config": "0.0.0-dev-20230608124649",
+    "@scrshot/config": "0.1.1",
     "minimist": "^1.2.8",
     "ms": "^2.1.3",
     "node-fetch": "^3.3.1",
