--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/core",
-  "version": "0.0.0-dev-20230608124649",
+  "version": "0.1.1",
   "description": "Web Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
