--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/core",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Web Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -12,7 +12,7 @@
     "url": "https://marcin.page/"
   },
   "homepage": "https://scrshot.dev",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0-or-later",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -30,7 +30,8 @@
     "dev": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "@stencil/core": "3.3.1",
