--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/bundler",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Bundlers plugin for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -15,27 +15,81 @@
   "license": "AGPLv3",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./vite": {
+      "types": "./dist/vite.d.ts",
+      "require": "./dist/vite.js",
+      "import": "./dist/vite.mjs"
+    },
+    "./webpack": {
+      "types": "./dist/webpack.d.ts",
+      "require": "./dist/webpack.js",
+      "import": "./dist/webpack.mjs"
+    },
+    "./rollup": {
+      "types": "./dist/rollup.d.ts",
+      "require": "./dist/rollup.js",
+      "import": "./dist/rollup.mjs"
+    },
+    "./esbuild": {
+      "types": "./dist/esbuild.d.ts",
+      "require": "./dist/esbuild.js",
+      "import": "./dist/esbuild.mjs"
+    },
+    "./rspack": {
+      "types": "./dist/rspack.d.ts",
+      "require": "./dist/rspack.js",
+      "import": "./dist/rspack.mjs"
+    },
+    "./next": {
+      "types": "./dist/next.d.ts",
+      "require": "./dist/next.js",
+      "import": "./dist/next.mjs"
+    },
+    "./nuxt": {
+      "types": "./dist/nuxt.d.ts",
+      "require": "./dist/nuxt.js",
+      "import": "./dist/nuxt.mjs"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts",
+      "require": "./dist/types.js",
+      "import": "./dist/types.js"
+    },
+    "./*": "./*"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*",
+        "./*"
+      ]
     }
   },
-  "main": "./dist/index.cjs",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
-    "check-types": "tsc --noEmit"
+    "build": "tsup",
+    "build:fix": "esno scripts/postbuild.ts",
+    "dev": "tsup --watch src",
+    "check-types": "tsc --noEmit",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@scrshot/config": "0.1.1",
+    "@scrshot/config": "0.1.2",
     "recast": "0.23.2",
     "unplugin": "1.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.2.0-dev.20230607"
+    "typescript": "4.9.4",
+    "tsup": "6.7.0",
+    "esno": "0.16.3"
   }
 }
