--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/cli",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "CLI for Scrshot - Create up-to-date application screenshots",
   "type": "module",
   "keywords": [
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "prepublishOnly": "yarn build"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -33,7 +34,8 @@
     "unbuild": "^1.2.1"
   },
   "dependencies": {
-    "@scrshot/config": "0.1.1",
+    "@scrshot/config": "0.1.2",
+    "chokidar": "^3.5.3",
     "minimist": "^1.2.8",
     "ms": "^2.1.3",
     "node-fetch": "^3.3.1",
