--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/config",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "CLI config for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -28,12 +28,14 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "cosmiconfig": "8.2.0",
     "zod": "3.21.4",
-    "zod-to-json-schema": "3.21.1"
+    "zod-to-json-schema": "3.21.1",
+    "zod-validation-error": "^1.3.0"
   },
   "devDependencies": {
     "typescript": "4.9.4"
