--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/react",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "React Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -28,14 +28,15 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
     "react-dom": "18.2.0",
     "react": "18.2.0"
   },
   "dependencies": {
-    "@scrshot/core": "0.1.1"
+    "@scrshot/core": "0.1.2"
   },
   "devDependencies": {
     "typescript": "4.9.4"
