--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/react-native",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "React Native Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "mobile",
@@ -14,7 +14,11 @@
     "url": "https://marcin.page/"
   },
   "homepage": "https://scrshot.dev",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Perfect7M/scrshot.git"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
@@ -39,7 +43,7 @@
     "react-native": "0.71.8"
   },
   "dependencies": {
-    "@scrshot/core": "0.2.0"
+    "@scrshot/core": "0.2.1"
   },
   "devDependencies": {
     "typescript": "4.9.4"
