--- a/examples/vite-react/package.json
+++ b/examples/vite-react/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@scrshot/react": "0.2.0"
+    "@scrshot/react": "0.2.1"
   },
   "devDependencies": {
     "@types/react": "18.2.10",
@@ -25,8 +25,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "@scrshot/cli": "0.2.0",
-    "@scrshot/build": "0.2.0"
+    "vite": "4.3.9",
+    "@scrshot/cli": "0.2.1",
+    "@scrshot/build": "0.2.1"
   }
 }
