--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/cli",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "CLI for Scrshot - Create up-to-date application screenshots",
   "type": "module",
   "keywords": [
@@ -13,7 +13,11 @@
     "url": "https://marcin.page/"
   },
   "homepage": "https://scrshot.dev",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Perfect7M/scrshot.git"
+  },
   "bin": {
     "scrshot": "index.js"
   },
@@ -24,6 +28,7 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
+    "lint": "publint",
     "check-types": "tsc --noEmit",
     "prepublishOnly": "yarn build"
   },
@@ -31,18 +36,18 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
-    "unbuild": "^1.2.1"
+    "unbuild": "^1.2.1",
+    "publint": "0.2.2"
   },
   "dependencies": {
-    "@scrshot/config": "0.2.0",
-    "chokidar": "^3.5.3",
+    "@scrshot/config": "0.2.1",
     "dayjs": "^1.11.8",
     "detox": "^20.9.1",
     "minimist": "^1.2.8",
     "ms": "^2.1.3",
     "node-fetch": "^3.3.1",
     "ora": "^6.3.1",
-    "playwright": "^1.34.3",
-    "sharp": "^0.32.1"
+    "playwright": "^1.38.0",
+    "sharp": "^0.32.5"
   }
 }
