--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/core",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Web Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -12,7 +12,11 @@
     "url": "https://marcin.page/"
   },
   "homepage": "https://scrshot.dev",
-  "license": "AGPL-3.0-or-later",
+  "license": "AGPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Perfect7M/scrshot.git"
+  },
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
