--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scrshot/react",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "React Components for Scrshot - Create up-to-date application screenshots",
   "keywords": [
     "cli",
@@ -12,12 +12,12 @@
     "url": "https://marcin.page/"
   },
   "homepage": "https://scrshot.dev",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.mts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
     }
   },
   "main": "./dist/index.cjs.js",
@@ -26,9 +26,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsup",
+    "dev": "tsup --stub",
     "check-types": "tsc --noEmit",
+    "lint": "publint",
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
@@ -36,9 +37,11 @@
     "react": "18.2.0"
   },
   "dependencies": {
-    "@scrshot/core": "0.2.0"
+    "@scrshot/core": "0.2.1"
   },
   "devDependencies": {
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "tsup": "7.2.0",
+    "publint": "0.2.2"
   }
 }
